Revision history for {{$dist->name}}

{{$NEXT}}

0.07      2015-01-15 18:53:45 -0500
  - First (mostly complete) beta
  - workaround some issues with closures
  - much more comprehensive documentation

0.06      2015-01-14 17:13:57 -0500
  - fix typo in last version that broke 32 bit Perls.  oops.

0.05      2015-01-14 17:04:25 -0500
  - Forth (and mostly complete) alpha
  - custom types written in Perl are supported.
  - bug fixes for 32 bit Perls (with compilers that support int64_t)

0.04      2015-01-13 11:14:54 -0500
  - Third (and incomplete) alpha
  - all basic types supported everywhere
  - closures do not support non basic types or returning strings from a closure

0.03      2015-01-09 15:40:14 -0500
  - Second (and incomplete) alpha
  - closure support added (only integer arguments implmented).
  - memory leak related to closures will be fixed in the next alpha.

0.02      2015-01-07 17:40:35 -0500
  - Early (and incomplete) alpha

0.01      2015-01-07 17:21:27 -0500
  - Original (and incompatible) prototype