@@ -13,18 +13,22 @@ allow_dirty   = Build.PL
 
 [RemovePrereqs]
 
-; comes with Perl
+; comes with Perl 5.8.1 or better
 remove = strict
 remove = warnings
 remove = base
 remove = constant
 remove = overload
+remove = open
+remove = bytes
+remove = utf8
 remove = XSLoader
 remove = File::Spec
 remove = File::Copy
 remove = Scalar::Util
 remove = Exporter
 remove = Carp
+remove = Encode
 
 ; comes with THIS distro
 remove = FFI::Platypus::ConfigData
